log/build_2022-05-26_11-30-04/central_pc/stderr.log
  File "/home/sycamore/Syca_ws/install/lib/python3.8/site-packages/central_pc/OptiTrack_sub.py", line 12
    if jbType == 'waveshare'
                           ^
SyntaxError: invalid syntax

